syntax = "proto3";

option go_package = "/genproto";

package protos;

service AuthService {
    rpc Register(RegisterRequest) returns (RegisterResponse);
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc GetProfile(GetProfileRequest) returns (GetProfileResponse);
    rpc EditProfile(EditProfileRequest) returns (EditProfileResponse);
    rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
    rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
    rpc ResetPassword(ResetPasswordRequest) returns (ResetPasswordResponse);
    rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse);
    rpc Logout(LogoutRequest) returns (LogoutResponse);
    rpc GetEcoPoints(GetEcoPointsRequest) returns (GetEcoPointsResponse);
    rpc AddEcoPoints(AddEcoPointsRequest) returns (AddEcoPointsResponse);
    rpc GetEcoPointsHistory(GetEcoPointsHistoryRequest) returns (GetEcoPointsHistoryResponse);
}

message RegisterRequest {
    string username = 1;
    string email = 2;
    string password = 3;
    string fullname = 4;
}

message RegisterResponse {
    string id = 1;
    string username = 2;
    string email = 3;
    string fullname = 4;
    string created_at = 5;
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    string access_token = 1;
    string refresh_token = 2;
    int32 expires_in = 3;
}

message GetProfileRequest {
    string userid = 1;
}

message GetProfileResponse {
    string id = 1;
    string username = 2;
    string email = 3;
    string fullname = 4;
    int32 ecopoints = 5;
    string created_at = 6;
    string updated_at = 7;
}

message EditProfileRequest {
    string userid = 1;
    string fullname = 2;
    string bio = 3;
}

message EditProfileResponse {
    string id = 1;
    string username = 2;
    string email = 3;
    string fullname = 4;
    string bio = 5;
    string updated_at = 6;
}

message ListUsersRequest {
    int32 page = 1;
    int32 limit = 2;
}

message ListUsersResponse {
    repeated User users = 1;
    int32 total = 2;
    int32 page = 3;
    int32 limit = 4;
}

message User {
    string id = 1;
    string username = 2;
    string fullname = 3;
    int32 eco_points = 4;
}

message DeleteUserRequest {
    string userid = 1;
}

message DeleteUserResponse {
    string message = 1;
}

message ResetPasswordRequest {
    string email = 1;
}

message ResetPasswordResponse {
    string message = 1;
}

message RefreshTokenRequest {
    string refresh_token = 1;
}

message RefreshTokenResponse {
    string access_token = 1;
    string refresh_token = 2;
    int32 expires_in = 3;
}

message LogoutRequest {
    string access_token = 1;
}

message LogoutResponse {
    string message = 1;
}

message GetEcoPointsRequest {
    string userid = 1;
}

message GetEcoPointsResponse {
    string userid = 1;
    int32 eco_points = 2;
    string last_updated = 3;
}

message AddEcoPointsRequest {
    string userid = 1;
    int32 points = 2;
    string reason = 3;
}

message AddEcoPointsResponse {
    string userid = 1;
    int32 eco_points = 2;
    int32 added_points = 3;
    string reason = 4;
    string timestamp = 5;
}

message GetEcoPointsHistoryRequest {
    string userid = 1;
    int32 page = 2;
    int32 limit = 3;
}

message GetEcoPointsHistoryResponse {
    repeated EcoPointsHistory history = 1;
    int32 total = 2;
    int32 page = 3;
    int32 limit = 4;
}

message EcoPointsHistory {
    string id = 1;
    int32 points = 2;
    string type = 3;
    string reason = 4;
    string timestamp = 5;
}